Vue produção e gramática

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				</div><br/>
 				<div id="helper">
 					<i class="material-icons">live_help</i>
-					<div id="box">As informações de tarefas concluídas/deletadas são exclusivamente aramazenadas no navegador da máquina que estiver utilizando, sendo assim acessar por outro navegador ou outra máquina terá outras informações que ficarão vinculadas à ele. Você pode "resetar" a contagem tanto das tarefas concluídas, quanto das deletadas clicando em "limpar".</div>
+					<div id="box">As informações de tarefas concluídas/deletadas são exclusivamente armazenadas no navegador atual que estiver utilizando, portanto, acessar por outro navegador ou outra máquina resultará em outras informações que ficarão vinculadas à ele. Você pode "resetar" a contagem tanto das tarefas concluídas, quanto das deletadas clicando em "limpar".</div>
 				</div>
 			</div>
 			
@@ -35,7 +35,7 @@
 		
 	</div>
 	<footer>DESENVOLVIDO POR ALAOR JR</footer>
-<script type="text/javascript" src="js/vue.js"></script>
+<script type="text/javascript" src="js/vue.min.js"></script>
 <script type="text/javascript" src="js/scripts.js"></script>
 </body>
 </html>
