Pequenas mudanças para responsivo

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Gerenciador de Tarefas</title>
 	<link rel="icon" type="image/png" href="img/favicon.png"/>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -18,7 +19,6 @@
 					Concluídas<br/>
 					<button class="clear_count" v-on:click="clearCount('done')">Limpar</button>
 					{{count.done}}
-					
 				</div><!--
 				--><div id="count_delete">
 					Deletadas<br/>
