--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<link rel="shortcut icon" href="img/favicon/favicon.ico">
 	<meta name="msapplication-config" content="img/favicon/browserconfig.xml">
 	<meta name="theme-color" content="#ffffff">
-
-
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
 	<div id="app">
