--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
 	</div>
 	<footer>DESENVOLVIDO POR ALAOR JR</footer>
 <script type="text/javascript" src="js/vue.min.js"></script>
-<script type="text/javascript" src="js/scripts.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
