--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<meta name="msapplication-config" content="img/favicon/browserconfig.xml">
 	<meta name="theme-color" content="#ffffff">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/addtohomescreen.css">
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
@@ -42,6 +43,8 @@
 		
 	</div>
 	<footer>DESENVOLVIDO POR ALAOR JR</footer>
+	
+<script type="text/javascript" src="js/addtohomescreen.min.js"></script>
 <script type="text/javascript" src="js/vue.min.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 </body>
