--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="stylesheet" type="text/css" href="css/addtohomescreen.css">
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<script type="text/javascript" src="js/addtohomescreen.min.js"></script>
+	<script>
+	addToHomescreen();
+	</script>
 </head>
 <body>
 	<div id="app">
@@ -46,7 +50,6 @@
 	</div>
 	<footer>DESENVOLVIDO POR ALAOR JR</footer>
 	
-<script type="text/javascript" src="js/addtohomescreen.min.js"></script>
 <script type="text/javascript" src="js/vue.min.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 </body>
