--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 	<div id="app">
 		<h1>Gerenciador de Tarefas</h1>
-		<h2>- utilizando vue.js/webstorage -</h2>
+		<h2>- utilizando vue.js/webstorage/sw -</h2>
 		<input type="text" id="task_description" placeholder="Informe a tarefa" v-model="task_description" onkeyup="return getKeyPress(event);"/><!--
 		--><button id="add_edit_task" v-on:click="addTask">Adicionar Tarefa</button>
 			<div id="count">
