--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="stylesheet" type="text/css" href="css/addtohomescreen.css">
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<script type="text/javascript" src="js/addtohomescreen.min.js"></script>
+	<script src="js/addtohomescreen.js"></script>
 	<script>
 	addToHomescreen();
 	</script>
