--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	</div>
 	<footer>DESENVOLVIDO POR ALAOR JR</footer>
 	
-<script type="text/javascript" src="js/vue.js"></script>
+<script type="text/javascript" src="js/vue.min.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
