--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="stylesheet" type="text/css" href="css/addtohomescreen.css">
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<script src="js/addtohomescreen.js"></script>
+	<!--<script src="js/addtohomescreen.js"></script>
 	<script>
 	addToHomescreen();
-	</script>
+	</script>-->
 </head>
 <body>
 	<div id="app">
