--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	<meta name="msapplication-config" content="img/favicon/browserconfig.xml">
 	<meta name="theme-color" content="#ffffff">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<link rel="stylesheet" type="text/css" href="css/addtohomescreen.css">
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<!--<script src="js/addtohomescreen.js"></script>
+	<!--<link rel="stylesheet" type="text/css" href="css/addtohomescreen.css"
+	<script src="js/addtohomescreen.js"></script>
 	<script>
 	addToHomescreen();
 	</script>-->
